--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <h1>مشاركة هذا المحتوى</h1>
     <p>هذا هو المحتوى الذي ترغب في مشاركته.</p>
     <button onclick="shareContent()">مشاركة</button>
-
+    <button onclick="print()">طباعة</button>
     <script>
         function shareContent() {
             if (navigator.share) {
