--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         
         // الحصول على قيمة البارامتر
         const name = urlParams.get('name'); // "John"
+        alert(name);
         function shareContent() {
             if (navigator.share) {
                 navigator.share({
