--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>مشاركة المحتوى</title>
 </head>
 <body>
-    <h1>مشاركة هذا المحتوى</h1>
+    <h1>مشاركة هذا المحتوى وطباعته</h1>
     <p>هذا هو المحتوى الذي ترغب في مشاركته.</p>
     <button onclick="shareContent()">مشاركة</button>
     <br>
