--- a/index.html
+++ b/index.html
@@ -1,33 +1,222 @@
 <!DOCTYPE html>
-<html>
+<html lang="ar">
 <head>
-    <title>مشاركة المحتوى</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>تطبيق كتابة المقالات</title>
+    <script src="https://www.gstatic.com/firebasejs/8.3.1/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.3.1/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.3.1/firebase-database.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.3.1/firebase-storage.js"></script>
+    <style>
+        body {
+            direction: rtl;
+            font-family: Arial, sans-serif;
+            display: flex;
+            height: 100vh;
+            margin: 0;
+            background-color: #f4f4f4; /* لون خلفية فاتح */
+        }
+        @font-face {
+            font-family: normal;
+            src: url(Tajawal-Regular-2.ttf);
+        }
+        *{
+            box-sizing: border-box;
+            font-family: normal;
+        }
+        ::-webkit-scrollbar{
+            background: none;
+            width: 5px;
+        }
+        ::-webkit-scrollbar-thumb{
+            background-color: #ccc;
+            border-radius: 5px;
+        }
+        ::-webkit-scrollbar-thumb:hover{
+            background-color: #00796b;
+        }
+        .container {
+            display: flex;
+            width: 100%;
+            overflow: hidden;
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+        }
+        .section {
+            padding: 20px;
+            background-color: #ffffff; /* لون خلفية الأقسام */
+            overflow-y: auto;
+        }
+        #articlesSection, #booksSection {
+            width: 35%;
+            border-right: 1px solid #ddd;
+        }
+        #pdfViewerSection {
+            width: 80%; /* عرض قسم عرض PDF */
+            background-color: #e8e8e8;
+        }
+        h1, h2 {
+            font-size: 24px;
+            color: #00796b; /* لون النص */
+            margin-bottom: 10px;
+        }
+        .article, .book {
+            border: 1px solid #00796b; /* لون الصندوق */
+            margin-bottom: 20px;
+            padding: 15px;
+            border-radius: 8px;
+            background-color: #e0f2f1; /* لون خلفية الصندوق */
+            direction: ltr;
+        }
+        .buttons {
+            margin-top: 10px;
+        }
+        .title {
+            font-size: 20px;
+            margin-bottom: 10px;
+            font-weight: bold;
+        }
+        .book-list {
+            margin-top: 20px;
+            display: flex;
+            flex-wrap: wrap; /* تنظيم الصناديق في صفوف */
+        }
+        .book-box {
+            width: 100%; /* عرض الصندوق */
+            margin: 5px;
+            padding: 15px;
+            border: 1px solid #9e9e9e;
+            border-radius: 8px;
+            cursor: pointer;
+            text-align: center;
+            transition: transform 0.2s;
+            box-sizing: border-box;
+        }
+        .book-box:hover {
+            background-color: #b2dfdb; /* لون خلفية الصندوق */
+            transform: scale(1.03); /* تكبير الصندوق عند التمرير */
+        }
+        .search-bar {
+            margin-bottom: 20px;
+        }
+        input[type="text"], input[type="file"] {
+            width: 100%;
+            padding: 10px;
+            border-radius: 0px;
+        }
+        input[type="file"]{
+            margin-bottom: 15px;
+        }
+        input[type="text"]{
+            border: none;
+            border-bottom: 1px solid #999;;
+        }
+        input[type="text"]:focus{
+            outline: none;
+            border-bottom: 1px solid #00796b;
+        }
+        button {
+            background-color: #00796b; /* لون الزر */
+            color: white;
+            border: none;
+            border-radius: 5px;
+            padding: 10px 15px;
+            cursor: pointer;
+            transition: background-color 0.3s;
+            font-weight: bold;
+        }
+        button:hover {
+            background-color: #004d40; /* لون الزر عند التمرير */
+        }
+        .rating {
+            display: flex;
+            cursor: pointer;
+        }
+        .star {
+            font-size: 20px;
+            color: #ffd700; /* لون النجوم */
+            margin-right: 5px;
+        }
+        .tab{
+            padding: 15px;
+            text-align: center;
+            cursor: pointer;
+            
+            border-left: 5px #ffffff00 solid;
+        }
+        .tab:hover{
+            background-color: #ffffff18;
+        }
+        .deleteBook{
+            background: none;
+            color: #00796b;
+        }
+        .deleteBook:hover{
+            text-decoration: underline;
+            background: none;
+        }
+        .txtdiv{
+            margin: 5px;
+            padding: 10px;
+            background-color: #eee;
+            min-height: 100px;
+            max-height: 250px;
+            overflow-y: auto;
+            border-radius: 8px;
+        }
+    </style>
 </head>
 <body>
-    <h1>مشاركة هذا المحتوى وطباعته!</h1>
-    <p>هذا هو المحتوى الذي ترغب في مشاركته.</p>
-    <button onclick="shareContent()">مشاركة</button>
-    <br>
-    <button onclick="print()">طباعة</button>
-    <script>
-        const urlParams = new URLSearchParams(window.location.search);
-        
-        // الحصول على قيمة البارامتر
-        const name = urlParams.get('name'); // "John"
-        alert(name);
-        function shareContent() {
-            if (navigator.share) {
-                navigator.share({
-                    title: 'مشاركة المحتوى',
-                    text: 'هذا هو المحتوى الذي أريد مشاركته.',
-                    url: 'https://example.com'
-                })
-                .then(() => console.log('مشاركة ناجحة'))
-                .catch((error) => console.log('حدث خطأ في المشاركة:', error));
-            } else {
-                alert('وظيفة المشاركة غير مدعومة في هذا المتصفح.');
-            }
-        }
-    </script>
+<script src="jquery-1.10.0.min.js"></script>
+<div class="container">
+    <div class="section" style="padding: 0px;background-color: #004d40; color: #fff; text-align: center;">
+        <div class="tab" onclick="page('book_side')">
+            <img src="img/book.svg">
+        </div>
+        <div class="tab" onclick="page('article_side')">
+            <img src="img/note.svg">
+        </div>
+        <div class="tab" onclick="page('trans')">
+            <img src="img/trans.svg">
+        </div>
+    </div>
+    <div class="section" id="articlesSection">
+        <div id="article_side" class="side" style="display: none;">
+            <h1>كتابة المقالات</h1>
+            <div class="search-bar">
+                <input type="text" id="articleSearch" placeholder="بحث عن المقالات..." oninput="searchArticles()">
+            </div>
+            <button onclick="createArticle()">إنشاء مقال</button>
+            <div style="height: 15px;"></div>
+            <div id="articles"></div>
+        </div>
+        <div id="book_side" class="side">
+            <h1>الكتب المرفوعة</h1>
+            <div class="search-bar">
+                <input type="text" id="bookSearch" placeholder="بحث عن الكتب..." oninput="searchBooks()">
+            </div>
+            <input type="file" id="pdfUpload" accept="application/pdf">
+            <button onclick="uploadPDF()">رفع الكتاب</button>
+            <div class="book-list" id="bookList"></div>
+        </div>
+        <div id="trans" class="side" style="display: none;">
+            <h1>ترجمة</h1>
+            <div contenteditable="true" class="txtdiv" id="eng_txt" style="direction: ltr;">Hello</div>
+            <button id="translateButton" style="margin-right: 5px;">ترجم</button>
+            <div contenteditable="true" class="txtdiv" id="ar_txt" style="text-align: right;
+            background-color: #fff; direction: rtl;">
+                مرحبا
+            </div>
+        </div>
+    </div>
+
+    <div class="section" id="pdfViewerSection">
+        <h1>عرض ملفات PDF</h1>
+        <iframe id="pdfDisplay" style="width: 100%; height: 80%; border: none;"></iframe>
+    </div>
+</div>
+
+<script src="script.js"></script>
+
 </body>
 </html>
