--- a/index.html
+++ b/index.html
@@ -171,13 +171,13 @@
 <div class="container">
     <div class="section" style="padding: 0px;background-color: #004d40; color: #fff; text-align: center;">
         <div class="tab" onclick="page('book_side')">
-            <img src="img/book.svg">
+            <img src="book.svg">
         </div>
         <div class="tab" onclick="page('article_side')">
-            <img src="img/note.svg">
+            <img src="note.svg">
         </div>
         <div class="tab" onclick="page('trans')">
-            <img src="img/trans.svg">
+            <img src="trans.svg">
         </div>
     </div>
     <div class="section" id="articlesSection">
